spacing fix

--- a/src/components/GamePage.css
+++ b/src/components/GamePage.css
@@ -2,7 +2,7 @@
     /* width: 100vw; */
     height: 100vh;
     position: relative;
-    top: 100vh;
+    top: 110vh;
     left: 0;
     padding-left: var(--page-pad);
     padding-right: var(--page-pad);
